--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             font-size: 20px;
         }
     </style>
+    <script>
+        location.reload(true);
+    </script>
 </head>
 <body>
     <div id="info"></div>
