--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             font-size: 20px;
         }
     </style>
-    <script>
-        location.reload(true);
-    </script>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
 </head>
 <body>
     <div id="info"></div>
