--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <div id="info"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="script3.js"></script>
+    <script src="script3.js?a=2"></script>
 </body>
  
 </html>
